2008-02-03  Yann Dauphin  <yann-nicolas.dauphin@polymtl.ca>

	* lightning.c: new file, implements JITC via GNU lightning

2008-02-03  Sam Steingold  <sds@gnu.org>

	add JITC harness
	* configure: accept --with-jitc=FLAVOR
	* eval.d (interpret_bytecode) [USE_JITC]: use jit_run
	[USE_JITC]: load the appropriate jit implementation
	* configure.in: call CL_LIGHTNING
	* m4/lightning.m4: implement CL_LIGHTNING
	* lispbibl.d [USE_JITC]: disable registers when using JITC
	* makemake.in: accept --with-jitc=FLAVOR
	(XCFLAGS) [--with-jitc=FLAVOR]: add -DUSE_JITC -D${with_jitc}
	link over ${with_jitc}.c into the build directory
	(eval.o): depend on ${with_jitc}.c
	(clean5): remove ${with_jitc}.c

2008-01-30  Sam Steingold  <sds@gnu.org>

	* pprint.lisp (copy-pprint-dispatch): distinguish the 3 cases:
	no argument, NIL argument, table argument
	Reported by "Hoehle, Joerg-Cyril" <Joerg-Cyril.Hoehle@t-systems.com>

2008-01-30  Sam Steingold  <sds@gnu.org>

	* makemake.in: libsvm requires FFI
	* modules/fastcgi/configure.in, modules/oracle/configure.in:
	* modules/pari/configure.in, modules/postgresql/configure.in:
        * modules/wildcard/configure.in, modules/zlib/configure.in:
	fail if ffcall is not present

2008-01-29  Sam Steingold  <sds@gnu.org>

	* po/Makefile.devel (LISPSOURCES): remove affi1
	(DSOURCES): remove affi, add funarg

2008-01-29  Sam Steingold  <sds@gnu.org>

	* version.sh: 2.44 (2008-02-02)

2008-01-27  Sam Steingold  <sds@gnu.org>

	* comptran.d (C_rationalp): new macro
	(N_N_log_N, N_N_expt_N): use it

2008-01-27  Reini Urban  <rurban@x-ray.at>

	<35_trans4>
	* places.lisp, comptran.d, realrand.d, realtran.d:
	Translate comments to English. Convert # to /* */.

2008-01-27  Sam Steingold  <sds@gnu.org>

	* pathname.d (get_time_size) [WIN32_NATIVE]: strip trailing
	backslash from resolved_asciz and close search_handle.
	This actually fixes 2007-12-31 & 2008-01-25 patches.
	Thanks to Michael Kappert <michael.kappert@gmx.net> for testing.
